@@ -65,8 +65,9 @@ const SAVE_VLIB_ACTION        = 49;
 const DOWNLOAD_ACTION         = 50;
 const PQ_REMOVE_DISC_ACTION   = 51;
 const PLAY_DISC_ACTION        = 52;
+const PLAY_PLAYLIST_ACTION    = 53;
 
-const HIDE_FOR_PARTY = new Set([PLAY_ACTION, PLAY_ALBUM_ACTION, PLAY_ALL_ACTION, MORE_ACTION, MORE_LIB_ACTION, RENAME_ACTION, REMOVE_ACTION, EDIT_ACTION, ADD_FAV_ACTION, DELETE_ACTION, ADD_TO_FAV_ACTION, REMOVE_FROM_FAV_ACTION, SELECT_ACTION, RATING_ACTION, ADD_FAV_FOLDER_ACTION, DELETE_FAV_FOLDER_ACTION, MOVE_FAV_TO_PARENT_ACTION, UNSUB_PODCAST_ACTION, MOVE_HERE_ACTION,  INSERT_ALL_ACTION, ADD_TO_PLAYLIST_ACTION, REMOVE_DUPES_ACTION, ADV_SEARCH_ACTION, SAVE_VLIB_ACTION, DOWNLOAD_ACTION, PLAY_DISC_ACTION]);
+const HIDE_FOR_PARTY = new Set([PLAY_ACTION, PLAY_ALBUM_ACTION, PLAY_ALL_ACTION, MORE_ACTION, MORE_LIB_ACTION, RENAME_ACTION, REMOVE_ACTION, EDIT_ACTION, ADD_FAV_ACTION, DELETE_ACTION, ADD_TO_FAV_ACTION, REMOVE_FROM_FAV_ACTION, SELECT_ACTION, RATING_ACTION, ADD_FAV_FOLDER_ACTION, DELETE_FAV_FOLDER_ACTION, MOVE_FAV_TO_PARENT_ACTION, UNSUB_PODCAST_ACTION, MOVE_HERE_ACTION,  INSERT_ALL_ACTION, ADD_TO_PLAYLIST_ACTION, REMOVE_DUPES_ACTION, ADV_SEARCH_ACTION, SAVE_VLIB_ACTION, DOWNLOAD_ACTION, PLAY_DISC_ACTION, PLAY_PLAYLIST_ACTION]);
 
 var ACTIONS=[
     {cmd:"play",         icon:"play_circle_outline"},
@@ -128,7 +129,8 @@ var ACTIONS=[
 
     {cmd:"download",     icon:"cloud_download"},
     {cmd:"pq-rmdisc",    svg:"album-multi"},
-    {cmd:"play-disc",    svg:"album-multi"}
+    {cmd:"play-disc",    svg:"album-multi"},
+    {cmd:"pl-track",     icon:"playlist_play"}
 ];
 
 function updateActionStrings() {
@@ -194,5 +196,6 @@ function updateActionStrings() {
     ACTIONS[DOWNLOAD_ACTION].title=i18n("Download");
     ACTIONS[PQ_REMOVE_DISC_ACTION].title=i18n("Remove disc");
     ACTIONS[PLAY_DISC_ACTION].title=i18n("Play disc starting at track");
+    ACTIONS[PLAY_PLAYLIST_ACTION].title=i18n("Play starting at track");
 }
 
