@@ -21,6 +21,7 @@
 14. Add custom icon for 'Add URL' action.
 15. Default to 'Breeze-dark' if 'desktop=KDE' is passed as URL query
     parameter.
+16. Add 'Play starting at track' action for playlists.
 
 2.10.7
 ------
